# $Id$

2007-07-05	Anton E. Lebedevich

	* main/Utils/TidyValidator.class.php: validationErrors renamed to
	messages, added getErrorCount() and getWarningCount().

2007-07-04	Anton E. Lebedevich

	* core/Logic/PostfixUnaryExpression.class.php: renamed from
	UnaryExpression.

	* core/Logic/PrefixUnaryExpression.class.php: implemented unary '-' and
	unary logical 'not'.

2007-07-03	Anton E. Lebedevich

	* core/OSQL/QueryCombination.class.php: added orderBy, limit, offset.

	* core/OSQL/SelectQuery.class.php, core/OSQL/OrderChain.class.php: type
	determination logic moved from SelectQuery to OrderChain.

2007-07-01	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: added ability
	get object not only by getById method.

	* main/Utils/ClassUtils.class.php: callStaticMethod, checkStaticMethod
	methods added.

2007-07-01	Konstantin V. Arkhipov

	* core/Form/Filters/NewLinesToBreaks.class.php,
	core/Form/Filters/UnixToUnixDecode.class.php,
	core/Form/Filters/UnixToUnixEncode.class.php: introduced.

	* core/Form/Filters/TrimFilter.class.php: direction support added.

2007-06-30	Sergey M. Skachkov

	* core/Form/Filter.class.php: trim() now return new TrimFilter
	instance.

	* core/Form/Filters/TrimFilter.class.php: charlist support added.

2007-06-29	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: normalizeUri added.

2007-06-28	Ivan Y. Khvostishkov

	* main/Utils/: ContentTypeHeader.class.php,
	DoctypeDeclaration.class.php, CommonDoctypeDeclaration.class.php:
	introduced.

2007-06-28	Denis M. Gabaidulin

	* core/Form/Form.class.php: importPrimitive method patched for
	correction work with primitive aliases when Form import data from raw
	http.

2007-06-27	Ivan Y. Khvostishkov

	* main/Utils/IO/: BufferedInputStream, FileInputStream and
	StringInputStream implemented, changed default behaviour for parent
	classes.

2007-06-27	Denis M. Gabaidulin

	* main/Flow/ModelAndView.class.php: viewIsNormal method added.

2007-06-22	Anton E. Lebedevich
