@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2005 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2005-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -15,5 +15,7 @@
 	 * 
 	 * @ingroup Filters
 	**/
-	abstract class BaseFilter extends Singleton implements Filtrator {/*_*/}
+	abstract class BaseFilter
+		extends Singleton
+		implements Filtrator, Instantiatable {/*_*/}
 ?>
